@@ -233,6 +233,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 7492) Rights can now be assigned to specific IP addresses and ranges by
   using $wgAutopromote (new defines: APCOND_ISIP and APCOND_IPINRANGE)
 * Add a 'change block' link to Special:IPBlockList und Special:Log
+* (bug 16672) Add canonical parameter to meta=siteinfo&siprop=namespaces|namespacealiases. 
 
 === Bug fixes in 1.14 ===
 
